[gd_scene load_steps=5 format=3 uid="uid://k5tac7btyldt"]

[ext_resource type="Script" path="res://hud.gd" id="1_y2a4y"]
[ext_resource type="FontFile" uid="uid://bh61ehiw3h71h" path="res://assets/Kenney Bold.ttf" id="2_5yd3o"]
[ext_resource type="Texture2D" uid="uid://c3segx1848aoo" path="res://assets/coin/coin-frame-1.png" id="3_1dffv"]

[sub_resource type="LabelSettings" id="LabelSettings_oeix4"]
font = ExtResource("2_5yd3o")
font_size = 48
shadow_size = 4
shadow_offset = Vector2(2, 2)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_y2a4y")

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Coint Dash!"
label_settings = SubResource("LabelSettings_oeix4")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Score" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0
"
label_settings = SubResource("LabelSettings_oeix4")

[node name="Time" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_oeix4")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_5yd3o")
theme_override_font_sizes/font_size = 30
theme_override_icons/icon = ExtResource("3_1dffv")
text = "Start"

[node name="Timer" type="Timer" parent="."]

[connection signal="start_game" from="." to="." method="_on_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
